--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   
 <link rel="stylesheet" href="style.css" type="text/css" media="screen" />
 <link rel="stylesheet" href="css/adxmenu.css" type="text/css" media="screen" />
+<link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,300,400,600,700,800' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700,300italic' rel='stylesheet' type='text/css'>
 
 <!--[if lt IE 7 ]> 
 <link rel="stylesheet" href="css/ie6.css" type="text/css" media="screen" />
@@ -23,17 +25,26 @@
 <body>
 <!--[if IE]><div id="IEroot"><![endif]--> 
 	<div class="wrap">
-		<div id="header">Header</div>
-		<div id="nav">
-			<ul class="menu adxm">
-				<li><a href="#">Home</a></li>
-				<li><a href="#">Gift Designs</a></li>
-				<li><a href="#">Bridal Collections</a></li>
-				<li><a href="#">Gift Hampers</a></li>
-				<li><a href="#">Flowers</a></li>
-				<li><a href="#">Festive Celebrations</a></li>
-			</ul>
+		<div id="header" class="clearfix">
+			<h1 class="floatl logo"><a href="#"><span>Million Networks</span></a></h1>
+			<div class="floatl" id="nav">
+				<ul class="menu adxm">
+					<li class="active"><a href="#">Utama</a></li>
+					<li><a href="#">Aktiviti Kumpulan Bergambar</a></li>
+					<li>
+						<a href="#">Perkhidmatan</a>
+						<ul>
+							<li><a href="#">Agen Pemasaran</a></li>
+							<li><a href="#">Agen Penternakan</a></li>
+						</ul>
+					</li>
+					<li><a href="#">Hubungi</a></li>
+					<li><a href="#">Twitter</a></li>
+					<li><a href="#">Facebook</a></li>
+				</ul>
+			</div>
 		</div>
+		
 		<div id="banner">Banner</div>
 		<div id="content">Content</div>
 		<div id="footer">Footer</div>
