--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" dir="ltr" lang="en-US">
 
 <head profile="http://gmpg.org/xfn/11">
-<title>PrettyPetals</title>
+<title>Million Networks</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <meta name="description" content="">
 <meta name="author" content="">
@@ -45,19 +45,94 @@
 			</div>
 		</div>
 		
-		<div id="banner">Banner</div>
-		<div id="content">Content</div>
-		<div id="footer">Footer</div>
+		<div id="content">
+			<div class="clearfix">
+				<div class="col1 floatl">
+					<form class="login">
+						<h2>Login Kumpulan</h2>
+						<p><label>Username</label> <input type="text" /></p>
+						<p><label>Password</label> <input type="text" /></p>
+						<p><label>&nbsp;</label> <input type="submit" value="Login" /></p>
+						
+						<p>Lupa Password? Masukkan email anda</p>
+						<p><input class="fullTxt" type="text" /></p>
+						<p><input type="submit" value="Recover" /></p>
+					</form>
+					<form class="clearfix daftar">
+						<h3>Daftar Ahli HIGOAT Online Disini</h3>
+						<p><select><option>Pilih Negeri</option></select></p>
+						<p><select><option>Pilih Jenis Ahli</option></select></p>
+						<p><select><option>Pilih Industri</option></select></p>
+						<p class="floatr"><input type="submit" value="Berikutnya" /></p>
+					</form>
+				</div>
+				<div class="col2 floatr">
+					<div id="banner"><img src="img/banner.jpg" /></div>
+					<div class="clearfix">
+						<div class="col2-1 floatl">
+							<form class="clearfix daftar">
+								<h3>Senarai Online Mobile Stokis</h3>
+								<p><select><option>Pilih Negeri</option></select></p>
+								<p><select><option>Pilih Budget</option></select></p>
+								<p><select><option>Pilih Status</option></select></p>
+								<p class="floatr"><input type="submit" value="Berikutnya" /></p>
+							</form>						
+						</div>
+						<div class="col2-1 infoAktiviti floatl">
+							<h3>Informasi &amp; Aktiviti</h3>
+							<ul>
+								<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </li>
+								<li>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </li>
+								<li>Duis aute irure dolor in reprehenderit in voluptate velit </li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</div>
+			
+			<div class="clearfix">
+				<div class="col3 floatl testimoni">
+					<h3>Testimoni</h3>
+					<div class="clearfix">
+						<img src="img/testimoni.png" class="floatl" />
+						<p>Diasaskan oleh Dr Azizan Osman, Richworks telah berkembang menjadi sebuah organisasi penganjuran seminar terulung di Malaysia dalam masa 3 tahun. Mulai 2008, Richworks secara khususnya, 
+						<br /><strong>Ahmad Huzairy</strong></p>
+					</div>
+				</div>
+				<div class="col3-1 floatl companies">
+					<h3>Syarikat</h3>
+					<img src="img/logo1.png" />
+					<img src="img/logo2.png" />
+					<img src="img/logo3.png" />
+					<img src="img/logo4.png" />
+				</div>
+			</div>
+			
+			<div class="clearfix">
+				<div class="col3 floatl iklan">
+					<img src="img/ads.jpg" />
+				</div>
+				<div class="col3-1 floatl tweet">
+					<h3>Tweet Terbaru</h3>
+					<p>Diasaskan oleh Dr Azizan Osman, Richworks telah berkembang menjadi sebuah organisasi penganjuran seminar terulung <br /><small>posted <a href="#">10 mins ago</a> by <a href="#">@Higoat</a><small></p>
+				</div>
+			</div>
+			
+			<div id="footer">
+				<p>&copy; 2012 HiGoat. Hakcipta Terpelihara.</p>
+				<p>Penafian: Richworks tidak akan bertanggungjawab terhadap sebarang kehilangan atau kerosakan yang dialami kerana menggunakan maklumat dalam laman in
+				pendidikan dalam bidang pembangunan kemuncak prestasi diri serta pembangunan diri.</p>
+			</div>
+		</div>
+		
 	</div>
 <!--[if IE]></div><![endif]--> 
 
   <!-- Javascript at the bottom for fast page loading -->
 
   <!-- Grab Google CDN's jQuery. fall back to local if necessary -->
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
-  <script>!window.jQuery && document.write('<script src="js/jquery-1.4.2.min.js"><\/script>')</script>
-  <script src="js/plugins.js?v=1"></script>
-  <script src="js/script.js?v=1"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+  <script src="js/fx.js"></script>
   <!--[if lt IE 7 ]>
     <script src="js/dd_belatedpng.js?v=1"></script>
   <![endif]-->
