--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
 					<li>
 						<a href="#">Perkhidmatan</a>
 						<ul>
-							<li><a href="#">Agen Pemasaran</a></li>
-							<li><a href="#">Agen Penternakan</a></li>
+							<li><a href="#">Latihan Asas</a></li>
+							<li><a href="#">Kursus Lanjutan</a></li>
+							<li><a href="#">Penghantaran Produk</a></li>
 						</ul>
 					</li>
 					<li><a href="#">Hubungi</a></li>
@@ -58,11 +59,12 @@
 						<p><input class="fullTxt" type="text" /></p>
 						<p><input type="submit" value="Recover" /></p>
 					</form>
-					<form class="clearfix daftar">
+					<form class="daftar">
+						<p class="alignc"><img src="img/higoat-logo.png" /></p>
 						<h3>Daftar Ahli HIGOAT Online Disini</h3>
-						<p><select><option>Pilih Negeri</option></select></p>
-						<p><select><option>Pilih Jenis Ahli</option></select></p>
-						<p><select><option>Pilih Industri</option></select></p>
+						<p>Pilih Negeri Anda<br /><select><option>Selangor</option></select></p>
+						<p>Pilih Daerah Anda<br /><select><option>Rawang</option></select></p>
+						<p>Pilih Kawasan Anda<select><option>Kampung Dua</option></select></p>
 						<p class="floatr"><input type="submit" value="Berikutnya" /></p>
 					</form>
 				</div>
@@ -70,11 +72,11 @@
 					<div id="banner"><img src="img/banner.jpg" /></div>
 					<div class="clearfix">
 						<div class="col2-1 floatl">
-							<form class="clearfix daftar">
+							<form class="stokis">
 								<h3>Senarai Online Mobile Stokis</h3>
-								<p><select><option>Pilih Negeri</option></select></p>
-								<p><select><option>Pilih Budget</option></select></p>
-								<p><select><option>Pilih Status</option></select></p>
+								<p>Pilih Negeri Anda<br /><select><option>Selangor</option></select></p>
+								<p>Pilih Daerah Anda<br /><select><option>Rawang</option></select></p>
+								<p>Pilih Kawasan Anda<select><option>Kampung Dua</option></select></p>
 								<p class="floatr"><input type="submit" value="Berikutnya" /></p>
 							</form>						
 						</div>
@@ -84,6 +86,7 @@
 								<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </li>
 								<li>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </li>
 								<li>Duis aute irure dolor in reprehenderit in voluptate velit </li>
+								<li>Duis aute irure dolor in</li>
 							</ul>
 						</div>
 					</div>
